--- a/css/style.css
+++ b/css/style.css
@@ -120,11 +120,11 @@ i {
 }
 
 header::before {
-    content: '';
+    content: "";
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
     right: 0;
     height: 60px;
-    background: url('../img/curveWhite.svg');
+    background: url("../img/curveWhite.svg");
 }
