--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,17 @@ body {
     );
 }
 
+/* Pancita debajo del header */
+header::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+    background: url("../img/curveWhite.svg");
+}
+
 #verde {
     background-color: rgb(62, 172, 135);
     color: white;
@@ -115,16 +126,80 @@ i {
 }
 
 :root {
-    --bg-dark: #282c34;
+    --bg-dark: #20242c;
     --color-gris: rgb(200, 200, 200);
+    --color-azul: rgb(0, 100, 255);
+    --color-lila: rgb(128, 0, 190);
 }
 
-header::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 60px;
-    background: url("../img/curveWhite.svg");
+#footer-cards-row {
+    position: relative;
+    z-index: 2;
+    transform: translateY(7rem);
+}
+
+.animate-up {
+    box-shadow: 0px 6px 10px 1px rgba(100, 100, 100, 0.5);
+    transition: 0.1s;
+}
+a.animate-up:hover {
+    transform: translateY(-6px);
+    box-shadow: 0px 6px 14px 2px rgba(100, 100, 100, 0.5);
+}
+a {
+    text-decoration: none;
+}
+h5.color-blue {
+    color: var(--color-azul);
+}
+h5.color-purple {
+    color: var(--color-lila);
+}
+
+.font-sm {
+    font-size: 1rem;
+}
+.font-md {
+    font-size: 1.1rem;
+}
+
+.svg-icon-card {
+    width: 5rem;
+    height: 5rem;
+}
+.bg-blue {
+    background-color: var(--color-azul);
+}
+.bg-purple {
+    background-color: var(--color-lila);
+}
+
+.svg-icon-card polyline {
+    font-size: 2rem;
+}
+
+#footer-sec {
+    background-color: var(--bg-dark);
+    position: relative;
+}
+
+footer * {
+    color: var(--color-gris);
+}
+footer a {
+    display: block;
+    text-decoration: none;
+}
+footer .row a:hover {
+    text-decoration: underline;
+}
+
+#iconsList {
+    list-style-type: none;
+}
+#iconsList li a {
+    margin-right: 10px;
+}
+#iconsList li a i {
+    font-size: x-large;
 }
