Corregido el nav bar
Corregi el id del navbar para que funcione el script que cambia de color

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ i {
     background: transparent;
 }
 #navbar-default.scrolled {
-    background: #000;
+    background: rgb(34, 34, 50);
 }
 .text-decoration-links {
     text-decoration: none;
